# magic-wormhole-js

./: .gitignore  README.md  build-spake2-wasm.sh  cli.js  package-lock.json  package.json  receive.js  send.js
lib/: encrypted.js  rendezvous.js  unencrypted.js  util.js
spake2-wasm/: Cargo.toml  README.md
spake2-wasm/pkg/: spake2_wasm.d.ts  spake2_wasm.js  spake2_wasm_bg.wasm
spake2-wasm/src/: lib.rs
