[package]
name = "spake2-wasm"
version = "0.1.0"
authors = ["Kevin Gibbons <bakkot@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spake2 = "0.2.0"
wasm-bindgen = "0.2"
rand = { version = "0.6", features = ["wasm-bindgen"] }

[profile.release]
lto = true
